se agrega  tutoriales consejos para ser mas eficiente el hogar

--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -14,10 +14,14 @@
         <li class="p-1"><a href="historico" class="block p-2 rounded hover:bg-gray-300 transition">Historicos</a></li>
         <li class="p-1"><a href="reportes" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a></li>
         <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Alertas</a></li>
-        <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Gruias y tutoriales</a></li>
+        <li class="p-1"><a href="guides" class="block p-2 rounded hover:bg-gray-300 transition">Gruias y tutoriales</a></li>
+        <!--<li>
+          <a routerLink="/guides" routerLinkActive="active">Guías y Tutoriales</a>
+        </li> -->
+
       </ul>
     </div>
-  
+
   </div>
 
   <!-- Contenedor inferior -->
