se agrega imagenes de pruebas

--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -27,7 +27,25 @@
         <!-- Panel de Archivos -->
         <div class="grid grid-cols-4 gap-4">
             <div class="bg-white p-4 rounded shadow">
-                <img src="path/to/image1" alt="Instalaciones Domóticas" class="h-20 w-full object-cover mb-2">
+                <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-20 w-full object-cover mb-2">
+                <p>Instalaciones Domóticas.pdf</p>
+                <p class="text-sm">589KB</p>
+                <button class="text-blue-500">Descargar</button>
+            </div>
+            <!-- Repetir para otros archivos -->
+        </div>
+        <div class="grid grid-cols-4 gap-4">
+            <div class="bg-white p-4 rounded shadow">
+                <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-20 w-full object-cover mb-2">
+                <p>Instalaciones Domóticas.pdf</p>
+                <p class="text-sm">589KB</p>
+                <button class="text-blue-500">Descargar</button>
+            </div>
+            <!-- Repetir para otros archivos -->
+        </div>
+        <div class="grid grid-cols-4 gap-4">
+            <div class="bg-white p-4 rounded shadow">
+                <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-20 w-full object-cover mb-2">
                 <p>Instalaciones Domóticas.pdf</p>
                 <p class="text-sm">589KB</p>
                 <button class="text-blue-500">Descargar</button>
@@ -61,9 +79,9 @@
         <div class="grid grid-cols-2 gap-8">
             <!-- Columna de Imágenes -->
             <div class="flex flex-col space-y-4">
-                <img src="path/to/image1.jpg" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
-                <img src="path/to/image2.jpg" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
-                <img src="path/to/image3.jpg" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
+                <img src="assets/img/Dispositivo.webp" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
+                <img src="assets/img/Dispositivo%201.webp" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
+                <img src="assets/img/Dispositivo.webp" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
             </div>
 
             <!-- Columna de Texto -->
