--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
       <ul class="menu menu-sm bg-base-100 rounded-box z-[1] p-2">
         <li class="p-1"><a [routerLink]="['/dashboard']" class="block p-2 rounded hover:bg-gray-300 transition">Dashboard</a></li>
         <li class="p-1"><a [routerLink]="['/huella']" class="block p-2 rounded hover:bg-gray-300 transition">Huella de carbono</a></li>
-        <li class="p-1"><a [routerLink]="['/historico']" class="block p-2 rounded hover:bg-gray-300 transition">Históricos</a></li>
+        <li class="p-1"><a [routerLink]="['/home/historico']" class="block p-2 rounded hover:bg-gray-300 transition">Históricos</a></li>
         <li class="p-1"><a [routerLink]="['/reportes']" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a></li>
       </ul>
 
