--- a/frontend/src/app/core/card/card-info.component.html
+++ b/frontend/src/app/core/card/card-info.component.html
@@ -1,15 +1,16 @@
-<!-- Tarjeta 1 -->
-<div class="bg-white p-6 rounded-lg shadow-lg">
-  <div class="grid grid-cols-2">
-    <div class="flex items-center justify-center h-12 w-12 bg-blue-100">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
-        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
+<div class="card bg-base-100 shadow-xl p-6 transform transition-transform hover:scale-105">
+  <div class="flex items-center mb-4">
+    <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-green-600">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m3.75 13.5 10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75Z" />
       </svg>
+
     </div>
-    <div>
-      <p class="text-xs">Consumo</p>
-    <p class="text-xs">Mes actual</p>
-    </div>
+      <div class="ml-4">
+        <h2 class="card-title">Consumo</h2>
+        <p class="text-sm sm:text-base text-pretty">Mes actual</p>
+      </div>
   </div>
-  <p class="mt-2 text-xs  text-gray-600">300 Kwh.</p>
+  <h2 class="card-title p-1">300 Kwh</h2>
+  <progress class="progress progress-success w-full" value="70" max="100"></progress>
 </div>
