--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-screen">
+<div class="flex h-screen bg-gray-50">
   <app-sidebar></app-sidebar>
   <div class="flex-1 flex flex-col">
      <app-toolbar></app-toolbar>
