--- a/frontend/src/app/routes/huella-carbono/huella-carbono.component.html
+++ b/frontend/src/app/routes/huella-carbono/huella-carbono.component.html
@@ -7,7 +7,7 @@
     </div>
     <!-- Segunda fila: Tarjetas -->
     <div class="container mx-auto py-4">
-      <div class="grid grid-cols-5 gap-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
         <app-card-info></app-card-info>
         <app-card-info></app-card-info>
         <app-card-info></app-card-info>
