--- a/frontend/src/app/routes/huella-carbono/huella-carbono.component.html
+++ b/frontend/src/app/routes/huella-carbono/huella-carbono.component.html
@@ -1,8 +1,8 @@
     <!-- Primera fila: Información general -->
     <div class="container mx-auto py-4">
       <div class="grid grid-cols-1 gap-4">
-        <h2 class="text-3xl font-bold">Huella de carbono</h2>
-        <p>Este panel te ofrece una proyección estimada basada en tu ritmo actual de consumo, permitiéndote anticipar el gasto al finalizar el mes.</p>
+        <h2 class="text-2xl font-bold">Huella de carbono</h2>
+        <p class="text-pretty">Este panel te ofrece una proyección estimada basada en tu ritmo actual de consumo, permitiéndote anticipar el gasto al finalizar el mes.</p>
       </div>
     </div>
     <!-- Segunda fila: Tarjetas -->
