--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -85,11 +85,6 @@
         </svg>
       </button>
     </div>
-    <div class="mt-4">
-      <iframe src="https://lucasjorgereta.grafana.net/d/3gFLlroVz/demo-dashboard?from=2024-10-02T05:30:10.149Z&to=2024-10-02T11:30:10.149Z&refresh=5s&viewPanel=panel-2"
-              width="100%"
-              height="300"
-              frameborder="0"></iframe>
-    </div>
+    <iframe src="http://192.168.0.158:3000/dashboard/snapshot/OgFBwIWhgIrBad8C38BVO25hv3PcCFpZ?orgId=0" width="450" height="200" frameborder="0"></iframe>
   </div>
 </div>
