se agrega  inf concejos nuevas img  pdf y video

--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -1,107 +1,144 @@
+<div class="flex full-screen">
+  <div class="p-4">
+    <!-- Título de la Sección -->
+    <h2 class="text-xl font-bold mb-6 text-center">Guías y Tutoriales</h2>
+    <!-- Panel de Archivos -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+      <div class="bg-white p-4 rounded shadow">
+        <img src="assets/img/lytics_logo_Grilla.png" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+        <p>Lytics.pdf</p>
+        <p class="text-sm">289KB</p>
+        <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
+          Descargar
+        </a>
+      </div>
+      <!-- Repetir para otros archivos -->
+      <div class="bg-white p-4 rounded shadow">
+        <img src="assets/img/Dispositivo.webp" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+        <p> Dispocitivos instalación.pdf</p>
+        <p class="text-sm">383KB</p>
+        <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
+          Descargar
+        </a>
+      </div>
 
-<div class="flex h-screen">
-
-
-    <div class="p-4">
-        <!-- Filtros de Locación y Dispositivo -->
-        <div class="flex justify-between items-center mb-4">
-            <div class="flex space-x-4">
-                <select class="p-2 bg-white border rounded">
-                    <option>Casa 1</option>
-                    <option>Casa 2</option>
-                </select>
-                <select class="p-2 bg-white border rounded">
-                    <option>rxv45000</option>
-                    <option>rxv45001</option>
-                </select>
-            </div>
-            <div class="flex items-center space-x-4">
-                <span>Usuario</span>
-                <img class="w-10 h-10 rounded-full" src="path/to/user-image" alt="Usuario">
-            </div>
-        </div>
-
-        <!-- Título de la Sección -->
-        <h2 class="text-xl font-bold mb-6">Guías y Tutoriales</h2>
-
-        <!-- Panel de Archivos -->
-        <div class="grid grid-cols-4 gap-4">
-            <div class="bg-white p-4 rounded shadow">
-                <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-20 w-full object-cover mb-2">
-                <p>Instalaciones Domóticas.pdf</p>
-                <p class="text-sm">589KB</p>
-                <button class="text-blue-500">Descargar</button>
-            </div>
-            <!-- Repetir para otros archivos -->
-        </div>
-        <div class="grid grid-cols-4 gap-4">
-            <div class="bg-white p-4 rounded shadow">
-                <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-20 w-full object-cover mb-2">
-                <p>Instalaciones Domóticas.pdf</p>
-                <p class="text-sm">589KB</p>
-                <button class="text-blue-500">Descargar</button>
-            </div>
-            <!-- Repetir para otros archivos -->
-        </div>
-        <div class="grid grid-cols-4 gap-4">
-            <div class="bg-white p-4 rounded shadow">
-                <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-20 w-full object-cover mb-2">
-                <p>Instalaciones Domóticas.pdf</p>
-                <p class="text-sm">589KB</p>
-                <button class="text-blue-500">Descargar</button>
-            </div>
-            <!-- Repetir para otros archivos -->
-        </div>
-
-        <!-- Bloque de Video -->
-        <div class="mt-8 p-6 bg-teal-50 rounded shadow flex items-center space-x-4">
-            <div>
-                <h3 class="text-xl font-bold">Domótica, aprender a crear tu casa inteligente.</h3>
-                <p class="text-sm text-gray-600">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at quam fringilla,
-                    scelerisque nisi in, accumsan diam.
-                </p>
-                <button class="mt-4 bg-teal-500 text-white py-2 px-4 rounded">Consejos</button>
-            </div>
-            <div>
-                <img src="path/to/building-image" alt="Video Thumbnail" class="w-64 h-auto rounded">
-                <button class="mt-2 text-teal-500">Ver Video</button>
-            </div>
-        </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="assets/img/veneficios.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+        <p>Info sobre domóticas.pdf</p>
+        <p class="text-sm">129KB</p>
+        <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
+          Descargar
+        </a>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="assets/img/domotica.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+        <p>Sofware Lytics.pdf</p>
+        <p class="text-sm">490KB</p>
+        <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
+          Descargar
+        </a>
+      </div>
     </div>
-    <div class="p-6 bg-white rounded-lg shadow-lg">
-        <!-- Encabezado -->
-        <div class="mb-6">
-            <h2 class="text-3xl font-bold">Cómo hacer tu casa más eficiente</h2>
-        </div>
-
-        <!-- Contenedor principal -->
-        <div class="grid grid-cols-2 gap-8">
-            <!-- Columna de Imágenes -->
-            <div class="flex flex-col space-y-4">
-                <img src="assets/img/Dispositivo.webp" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
-                <img src="assets/img/Dispositivo%201.webp" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
-                <img src="assets/img/Dispositivo.webp" alt="Persona trabajando" class="rounded-lg object-cover h-40 w-full">
-            </div>
-
-            <!-- Columna de Texto -->
-            <div>
-                <p class="text-lg mb-4">
-                    Para mejorar la eficiencia energética de tu hogar, es importante considerar varias medidas, como optimizar el uso de electrodomésticos, utilizar iluminación LED y aislar correctamente las ventanas y puertas. Estos pequeños cambios pueden ayudarte a reducir el consumo de energía y ahorrar en tus facturas.
-                </p>
-                <p class="text-lg mb-4">
-                    Mantener tus electrodomésticos en buen estado, desconectar los que no utilices y optar por modelos de bajo consumo son algunas de las maneras más efectivas de reducir el consumo de energía en casa.
-                </p>
-                <p class="text-lg mb-4">
-                    Asegúrate de que las ventanas y puertas de tu hogar estén correctamente selladas. Un buen aislamiento evita la pérdida de calor en invierno y reduce la necesidad de aire acondicionado en verano, optimizando el consumo energético.
-                </p>
-                <p class="text-lg">
-                    Sustituir las bombillas incandescentes por LED puede reducir significativamente el consumo de energía en iluminación. Además, las bombillas LED tienen una mayor durabilidad, lo que te ayudará a ahorrar en el largo plazo.
-                </p>
-            </div>
-        </div>
-    </div>
-
+  </div>
 </div>
 
 
+
+<!-- Bloque de Video -->
+      <div class="mt-8 p-6 bg-teal-100 rounded-lg shadow-md flex flex-col md:flex-row items-center space-x-0 md:space-x-8">
+        <div class="flex-1 mb-4 md:mb-0">
+          <h3 class="text-2xl font-semibold mb-2">Domótica: aprender a crear tu casa inteligente</h3>
+          <p class="text-gray-800 mb-4">
+            La domótica transforma tu hogar en un espacio más eficiente y seguro. Con sistemas inteligentes, puedes:
+          </p>
+          <ul class="list-disc ml-5 text-gray-800 mb-4">
+            <li>Controlar y automatizar la iluminación, optimizando el consumo energético.</li>
+            <li>Gestionar la climatización de manera eficiente, manteniendo un ambiente confortable.</li>
+            <li>Integrar sistemas de seguridad que te permiten monitorear tu hogar desde cualquier lugar.</li>
+            <li>Automatizar electrodomésticos para reducir el consumo innecesario de energía.</li>
+            <li>Recibir notificaciones en tiempo real sobre el estado de tu hogar.</li>
+          </ul>
+          <!-- Uncomment the button if needed -->
+          <!-- <a href="#consejos" class="mt-4 bg-teal-500 text-white py-2 px-4 rounded inline-block">Consejos</a> -->
+        </div>
+        <div class="flex-shrink-0">
+          <iframe width="100%" height="250" src="https://www.youtube.com/embed/ArTVr74nwXo" title="Video de Domótica" class="rounded-lg" allowfullscreen></iframe>
+
+        </div>
+      </div>
+
+
+      <div class="bg-white p-6 rounded-lg shadow-lg">
+ <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
+
+  <!-- <p class="text-gray-700 mb-4">
+    Para mejorar la eficiencia energética del hogar, es importante considerar varias medidas...
+  </p>-->
+
+  <!-- Contenedor para las imágenes a la izquierda y el texto a la derecha -->
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-start">
+    <!-- Imágenes a la izquierda -->
+    <div class="bg-white p-4 rounded shadow">
+      <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg mb-4 w-full max-w-xs h-auto object-cover">
+    </div>
+    <div class="bg-white p-4 rounded shadow">
+      <img src="assets/img/casasPersonas.webp" alt="Consejo 1" class="rounded-lg mb-4 w-full max-w-xs h-auto object-cover">
+    </div>
+
+
+
+  </div>
+</div>
+
+    <!-- Nuestros Servicios -->
+    <section  class="bg-gray-50 py-10">
+      <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
+        <h2 class="text-3xl font-extrabold text-black mb-8">Consejos</h2>
+        <h5 class="font-bold text-primary mb-8">Aquí van tus consejos...</h5>
+        <!-- Centramos el párrafo -->
+        <p class="text-lg text-gray-700 p-1 max-w-3xl prose">Para mejorar la eficiencia energética de tu hogar, es importante considerar varias medidas, como optimizar
+          el uso de electrodomésticos, utilizar iluminación LED
+          y aislar correctamente las ventanas y puertas. Estos pequeños cambios pueden ayudarte a reducir el
+          consumo de energía y ahorrar en tus facturas.</p> <!-- Tarjetas de beneficios -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+
+          <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+
+             <h3 class="mt-6 font-semibold text-gray-900">Consumos</h3>
+             <p class="mt-2 text-gray-600">Mantener tus electrodomésticos en buen estado, desconectar los que no utilices y optar por modelos de bajo consumo son algunas de las maneras más
+               efectivas de reducir el consumo de energía en casa.</p>
+           </div>
+
+           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+
+             <h3 class="mt-6 font-semibold text-gray-900">Temperatura</h3>
+             <p class="mt-2 text-gray-600">Ajustar el termostato de tu hogar puede hacer una gran diferencia en el consumo energético. Durante el invierno, mantener la temperatura entre 18°C y 21°C es ideal, mientras que en verano, mantenerla alrededor de 24°C a 26°C puede ayudarte a ahorrar energía. También considera usar ventiladores para hacer circular el aire y mejorar la eficiencia del sistema de calefacción y refrigeración.</p>
+           </div>
+
+           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+
+             <h3 class="mt-6 font-semibold text-gray-900">Ventanas</h3>
+             <p class="mt-2 text-gray-600">Asegúrate de que las ventanas y puertas de tu hogar estén correctamente selladas. Un buen aislamiento evita la pérdida de calor en invierno
+               y reduce la necesidad de aire acondicionado en verano, optimizando el consumo energético.</p>
+           </div>
+
+           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+
+             <h3 class="mt-6 font-semibold text-gray-900">Selladores</h3>
+             <p class="mt-2 text-gray-600">Revisa las puertas y ventanas de tu hogar en busca de posibles fugas de aire. Utiliza burletes o selladores para cerrar cualquier espacio por donde pueda entrar el aire exterior. Esto no solo ayuda a mantener la temperatura deseada dentro de tu hogar, sino que también reduce la carga en tu sistema de calefacción y refrigeración, lo que a su vez disminuye el consumo de energía.</p>
+           </div>
+
+           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+
+             <h3 class="mt-6 font-semibold text-gray-900">Luces</h3>
+             <p class="mt-2 text-gray-600">Las bombillas LED son más eficientes que las bombillas incandescentes, ya que consumen hasta un 80% menos de energía y tienen una vida útil mucho más larga. Cambiar todas las bombillas de tu hogar por LED puede reducir significativamente tu consumo energético, lo que se traduce en ahorros en tus facturas de electricidad.</p>
+           </div>
+
+           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+
+             <h3 class="mt-6 font-semibold text-gray-900">Termostato</h3>
+             <p class="mt-2 text-gray-600">Un termostato programable te permite ajustar automáticamente la temperatura de tu hogar en función de tus horarios y necesidades. Puedes programar el termostato para que baje la temperatura cuando no estás en casa o durante la noche, y así optimizar el uso de energía de manera eficiente.</p>
+           </div>
+         </div>
+       </div>
+     </section>
