se realiza algunas correcciones

--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -12,7 +12,7 @@
           Descargar
         </a>
       </div>
-      <!-- Repetir para otros archivos -->
+
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/Dispositivo.webp" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
         <p> Dispocitivos instalación.pdf</p>
@@ -32,7 +32,7 @@
       </div>
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/domotica.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
-        <p>Sofware Lytics.pdf</p>
+        <p>software Lytics.pdf</p>
         <p class="text-sm">490KB</p>
         <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
           Descargar
@@ -41,8 +41,6 @@
     </div>
   </div>
 </div>
-
-
 
 <!-- Bloque de Video -->
       <div class="mt-8 p-6 bg-teal-100 rounded-lg shadow-md flex flex-col md:flex-row items-center space-x-0 md:space-x-8">
@@ -66,30 +64,17 @@
 
         </div>
       </div>
-
-
       <div class="bg-white p-6 rounded-lg shadow-lg">
  <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
 
-  <!-- <p class="text-gray-700 mb-4">
-    Para mejorar la eficiencia energética del hogar, es importante considerar varias medidas...
-  </p>-->
-
-  <!-- Contenedor para las imágenes a la izquierda y el texto a la derecha -->
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-start">
-    <!-- Imágenes a la izquierda -->
+  <!-- Contenedor para las imágenes -->
     <div class="bg-white p-4 rounded shadow">
       <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg mb-4 w-full max-w-xs h-auto object-cover">
     </div>
     <div class="bg-white p-4 rounded shadow">
       <img src="assets/img/casasPersonas.webp" alt="Consejo 1" class="rounded-lg mb-4 w-full max-w-xs h-auto object-cover">
     </div>
-
-
-
   </div>
-</div>
-
     <!-- Nuestros Servicios -->
     <section  class="bg-gray-50 py-10">
       <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
