se agrega fotos y se corrige componente guias

--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="bg-white p-4 rounded shadow">
-        <img src="assets/img/veneficios.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+        <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
         <p>Info sobre domóticas.pdf</p>
         <p class="text-sm">129KB</p>
         <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
@@ -31,7 +31,7 @@
         </a>
       </div>
       <div class="bg-white p-4 rounded shadow">
-        <img src="assets/img/domotica.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+        <img src="assets/img/veneficios.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
         <p>software Lytics.pdf</p>
         <p class="text-sm">490KB</p>
         <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
@@ -64,18 +64,24 @@
 
         </div>
       </div>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
- <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
+
+<div class="bg-white p-6 rounded-lg shadow-lg">
+  <!-- Título centrado -->
+  <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
+
 
   <!-- Contenedor para las imágenes -->
-    <div class="bg-white p-4 rounded shadow">
-      <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg mb-4 w-full max-w-xs h-auto object-cover">
+  <div class="flex flex-wrap justify-center gap-6 mt-6">
+    <div class="bg-white p-4 rounded shadow-lg">
+      <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg w-full max-w-xs h-auto object-cover">
     </div>
-    <div class="bg-white p-4 rounded shadow">
-      <img src="assets/img/casasPersonas.webp" alt="Consejo 1" class="rounded-lg mb-4 w-full max-w-xs h-auto object-cover">
+    <div class="bg-white p-4 rounded shadow-lg">
+      <img src="assets/img/casasPersonas.webp" alt="Consejo 2" class="rounded-lg w-full max-w-xs h-auto object-cover">
     </div>
   </div>
-    <!-- Nuestros Servicios -->
+</div>
+
+<!-- Nuestros Servicios -->
     <section  class="bg-gray-50 py-10">
       <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
         <h2 class="text-3xl font-extrabold text-black mb-8">Consejos</h2>
